wier/force-app/main/default/objects/Competition__c/Competition__c.object-meta.xml
<CustomObject>
    <label>Competitor</label>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Competitor No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>