wier/force-app/main/default/objects/Competition__c/fields/Competetor_Billing_Rate__c.field-meta.xml
<CustomField>
    <fullName>Competetor_Billing_Rate__c</fullName>
    <label>Competetor Billing Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>