wier/force-app/main/default/objects/Competition__c/fields/Competetor_Margin__c.field-meta.xml
<CustomField>
    <fullName>Competetor_Margin__c</fullName>
    <label>Competetor Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>