wier/force-app/main/default/objects/Competition__c/fields/Competetor_Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>Competetor_Quote_Value__c</fullName>
    <label>Competetor Quote Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>