wier/force-app/main/default/objects/Competition__c/fields/Competetor_Strength__c.field-meta.xml
<CustomField>
    <fullName>Competetor_Strength__c</fullName>
    <label>Competetor Capabilities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>