wier/force-app/main/default/objects/Competition__c/fields/Competetor_Weekness__c.field-meta.xml
<CustomField>
    <fullName>Competetor_Weekness__c</fullName>
    <label>Competetor Weekness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>