wier/force-app/main/default/objects/Competition__c/fields/competitors_Listing_By_Serveice_offering__c.field-meta.xml
<CustomField>
    <fullName>competitors_Listing_By_Serveice_offering__c</fullName>
    <label>competitors Listing By Serveice offering</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oilfield - mfg</fullName>
            </value>
            <value>
                <fullName>Oilfield - repairs</fullName>
            </value>
            <value>
                <fullName>BOP - Hydril</fullName>
            </value>
            <value>
                <fullName>BOP - Others</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>Rot Equipment</fullName>
            </value>
            <value>
                <fullName>Valves - mfg</fullName>
            </value>
            <value>
                <fullName>Valves - repaire</fullName>
            </value>
            <value>
                <fullName>Field service - oilFields</fullName>
            </value>
            <value>
                <fullName>Field service - Valves</fullName>
            </value>
            <value>
                <fullName>Field service - rot.Equipments</fullName>
            </value>
            <value>
                <fullName>Trading</fullName>
            </value>
            <value>
                <fullName>Pup Joint - mfg</fullName>
            </value>
            <value>
                <fullName>Well Head</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>