wier/force-app/main/default/objects/Competition__c/listViews/Head_of_Sales_APS_RE_DXB_Competition.listView-meta.xml
<ListView>
    <fullName>Head_of_Sales_APS_RE_DXB_Competition</fullName>
    <filterScope>Queue</filterScope>
    <label>Head of Sales - APS/RE DXB</label>
    <queue>Head_of_Sales_APS_RE_DXB</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>